feat: add pagination to GET /subscriptions endpoint
