# docs/swagger.yaml
@@ -69,6 +69,17 @@ paths:
       consumes:
       - application/json
       description: Returns a list of all subscriptions
+      parameters:
+      - default: "1"
+        description: Page number
+        in: query
+        name: page
+        type: string
+      - default: "20"
+        description: Number of subscriptions per page
+        in: query
+        name: page_size
+        type: string
       produces:
       - application/json
       responses:
